{
  "version": 4,

  "terraform_version": "1.8.5",
  "serial": 93,

  "terraform_version": "1.8.4",
  "serial": 105,

  "lineage": "1adea6fe-b5c9-a220-d274-8f800d243ebc",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",

      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "type": "aws_autoscaling_group",
      "name": "AG_Test",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:autoscaling:eu-west-3:239816649909:autoScalingGroup:cfbdbd85-533a-4827-a5a1-b3bea20596ca:autoScalingGroupName/terraform-20240624134743172500000002",
            "availability_zones": [
              "eu-west-3a"
            ],
            "capacity_rebalance": false,
            "default_cooldown": 300,
            "default_instance_warmup": 0,
            "desired_capacity": 2,
            "force_delete": false,
            "force_delete_warm_pool": false,
            "health_check_grace_period": 300,
            "health_check_type": "EC2",
            "id": "terraform-20240624134743172500000002",
            "ignore_failed_scaling_activities": false,
            "launch_template": [
              {
                "id": "lt-0dba792266c94cf5f",
                "name": "web-server-20240621140553670900000001",
                "version": "$Latest"
              }
            ],
            "max_instance_lifetime": 0,
            "max_size": 3,
            "metrics_granularity": "1Minute",
            "min_size": 1,
            "name": "terraform-20240624134743172500000002",
            "name_prefix": "terraform-",
            "predicted_capacity": 0,
            "protect_from_scale_in": false,
            "service_linked_role_arn": "arn:aws:iam::239816649909:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
            "tag": [
              {
                "key": "Name",
                "propagate_at_launch": true,
                "value": "example-instance"
              }
            ],
            "vpc_zone_identifier": [
              "subnet-01e4b406b89ef773e"
            ],
            "wait_for_capacity_timeout": "10m",
            "warm_pool_size": 0
          },
          "dependencies": [
            "module.compute.aws_iam_instance_profile.EC2_instance_profile",
            "module.compute.aws_iam_role.launchtemplateRole",
            "module.compute.aws_launch_template.web_server",
            "module.compute.module.network.aws_security_group.allow_web",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:239816649909:instance/i-02dea54dec1eecf6f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02dea54dec1eecf6f",
            "instance_initiated_shutdown_behavior": "stop",

            "instance_state": "running",

            "instance_state": "stopped",

            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0112c963ba9362b3a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0112c963ba9362b3a",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "13.39.35.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2255a4a56ed1b66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4b406b89ef773e",
            "tags": {
              "name": "Web-Server-Terra"
            },
            "tags_all": {
              "name": "Web-Server-Terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0857cbdb661d9b93f"
            ]
          },
          "dependencies": [
            "module.compute.module.network.aws_network_interface.Web-server-nic",
            "module.compute.module.network.aws_security_group.allow_web",
            "module.compute.module.network.aws_subnet.subnet1",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044aad1b70f008cd8",
            "arn": "arn:aws:ec2:eu-west-3:239816649909:elastic-ip/eipalloc-044aad1b70f008cd8",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-07b0f741931e6cfc3",
            "domain": "vpc",
            "id": "eipalloc-044aad1b70f008cd8",
            "instance": "i-02dea54dec1eecf6f",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0112c963ba9362b3a",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-39-35-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.35.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.gw",
            "module.compute.module.network.aws_network_interface.Web-server-nic",
            "module.compute.module.network.aws_security_group.allow_web",
            "module.compute.module.network.aws_subnet.subnet1",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:internet-gateway/igw-0b4077e1ae79b1ef1",
            "id": "igw-0b4077e1ae79b1ef1",
            "owner_id": "239816649909",
            "vpc_id": "vpc-0c008676a48022a50"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Web-server-nic",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:network-interface/eni-0112c963ba9362b3a",
            "attachment": [
              {
                "attachment_id": "eni-attach-0424304389099c96c",
                "device_index": 0,
                "instance": "i-02dea54dec1eecf6f"
              }
            ],
            "id": "eni-0112c963ba9362b3a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:dd:4c:32:0a:3f",
            "owner_id": "239816649909",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0857cbdb661d9b93f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4b406b89ef773e"
          },
          "dependencies": [
            "module.compute.module.network.aws_security_group.allow_web",
            "module.compute.module.network.aws_subnet.subnet1",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod-route-table",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:route-table/rtb-0994cf0858f7fd18e",
            "id": "rtb-0994cf0858f7fd18e",
            "owner_id": "239816649909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4077e1ae79b1ef1",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4077e1ae79b1ef1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c008676a48022a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.gw",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f38e5e3593ebe4",
            "route_table_id": "rtb-0994cf0858f7fd18e",
            "subnet_id": "subnet-01e4b406b89ef773e"
          },
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.gw",
            "module.compute.module.network.aws_route_table.Prod-route-table",
            "module.compute.module.network.aws_subnet.subnet1",
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:security-group/sg-0857cbdb661d9b93f",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0857cbdb661d9b93f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow web traffic",
            "name_prefix": "",
            "owner_id": "239816649909",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Allow Web"
            },
            "tags_all": {
              "name": "Allow Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c008676a48022a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:subnet/subnet-01e4b406b89ef773e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4b406b89ef773e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239816649909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-Subnet"
            },
            "tags_all": {
              "Name": "production-Subnet"
            },
            "vpc_id": "vpc-0c008676a48022a50"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-1",

      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",

      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",

      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:239816649909:vpc/vpc-0c008676a48022a50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0175232118eadadc4",
            "default_route_table_id": "rtb-0c04836516545630b",
            "default_security_group_id": "sg-0af0dab2adbaf8027",
            "dhcp_options_id": "dopt-01c8fb4b3aed714f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c008676a48022a50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c04836516545630b",
            "owner_id": "239816649909",
            "tags": {
              "Name": "Production"
            },
            "tags_all": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}